fixed overflow

--- a/app.css
+++ b/app.css
@@ -213,8 +213,7 @@ position: relative;
     border: 1px solid rgb(146, 129, 129);
     cursor: pointer;
     padding: 15px;
-    width: 100%;
-    max-width: 400px;
+    
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     border-radius: 10px;
    background-color: #ECF2FF;
